--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - name: init
+        run: |
+          flutter clean
+          flutter pub get
+
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
@@ -56,12 +61,13 @@ jobs:
         run: |
           cd pve_flutter_frontend
           flutter pub get
+          dart pub run build_runner build --delete-conflicting-outputs
           cd ../proxmox_dart_api_client
           flutter pub get
-          flutter pub run build_runner build --delete-conflicting-outputs
+          dart pub run build_runner build --delete-conflicting-outputs
           cd ../proxmox_login_manager
           flutter pub get
-          flutter pub run build_runner build --delete-conflicting-outputs
+          dart pub run build_runner build --delete-conflicting-outputs
 
       - name: Check build output
         run: |
