--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -48,30 +48,29 @@ jobs:
         with:
           channel: 'stable'
           cache: true
+          cache-key: "flutter-:os:-:channel:-:version:-:arch:"
+          cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
+          pub-cache-key: "flutter-pub:os:-:channel:-:version:-:arch:"
+          pub-cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:"
 
       - name: Turn off analytics
         run: flutter --disable-analytics
 
+      - name: Upgrade win32
+        working-directory: ./pve_flutter_frontend
+        run: flutter pub upgrade win32
+
       - name: Build Dependencies
         run: |
-          cd pve_flutter_frontend
-          flutter run pub upgrade win32
-          flutter pub get
-          dart pub run build_runner build --delete-conflicting-outputs
-          cd ../proxmox_dart_api_client
-          flutter pub get
-          dart pub run build_runner build --delete-conflicting-outputs
-          cd ../proxmox_login_manager
-          flutter pub get
-          dart pub run build_runner build --delete-conflicting-outputs
-
-      - name: Check build output
-        run: |
-          set -xe
           cd proxmox_dart_api_client
-          ls -la lib
+          flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
           cd ../proxmox_login_manager
-          ls -la lib
+          flutter pub get
+          flutter packages pub run build_runner build --delete-conflicting-outputs
+          cd ../pve_flutter_frontend
+          flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
 
       - name: Decode Keystore
         working-directory: ./pve_flutter_frontend
@@ -85,7 +84,6 @@ jobs:
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
           echo "storeFile=keystore.jks" >> android/key.properties
-          keytool -list -keystore keystore.jks
 
       - name: Build APK
         working-directory: ./pve_flutter_frontend
