--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -101,4 +101,4 @@ jobs:
         with:
           artifacts: "./pve_flutter_frontend/build/app/outputs/flutter-apk/app-release.apk"
           tag: v${{ env.VERSION }}
-          token: ${{ secrets.TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
